k8s/food-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: food
  template:
    metadata:
      labels:
        app: food
    spec:
      containers:
      - name: food-container
        image: YOUR-DOCKERHUB-USERNAME/food-service:v1
        ports:
        - containerPort: 3000
