k8s/food-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-service
spec:
  type: ClusterIP
  selector:
    app: food
  ports:
  - port: 80
    targetPort: 3000
